--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="tugasAkhir.Properties.Settings.tugasAkhirConnectionString"
+            connectionString="Data Source=PRIBOEN\PRIBOEN;Initial Catalog=tugasAkhir;User ID=sa;Password=05012003"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
