--- a/tugasAkhir.csproj
+++ b/tugasAkhir.csproj
@@ -58,6 +58,12 @@
     <Compile Include="add_staff.Designer.cs">
       <DependentUpon>add_staff.cs</DependentUpon>
     </Compile>
+    <Compile Include="delete_siswacs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="delete_siswacs.Designer.cs">
+      <DependentUpon>delete_siswacs.cs</DependentUpon>
+    </Compile>
     <Compile Include="hapus_staff.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="siswa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="siswa.Designer.cs">
+      <DependentUpon>siswa.cs</DependentUpon>
+    </Compile>
     <Compile Include="staff_TU.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,11 +106,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>tugasAkhirDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="tugasAkhirDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>tugasAkhirDataSet2.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="add_murid.resx">
       <DependentUpon>add_murid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="add_staff.resx">
       <DependentUpon>add_staff.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="delete_siswacs.resx">
+      <DependentUpon>delete_siswacs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="hapus_staff.resx">
       <DependentUpon>hapus_staff.cs</DependentUpon>
@@ -119,6 +139,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="siswa.resx">
+      <DependentUpon>siswa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="staff_TU.resx">
       <DependentUpon>staff_TU.cs</DependentUpon>
     </EmbeddedResource>
@@ -152,6 +175,17 @@
     </None>
     <None Include="tugasAkhirDataSet1.xss">
       <DependentUpon>tugasAkhirDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="tugasAkhirDataSet2.xsc">
+      <DependentUpon>tugasAkhirDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="tugasAkhirDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>tugasAkhirDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="tugasAkhirDataSet2.xss">
+      <DependentUpon>tugasAkhirDataSet2.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
