--- a/tugasAkhir.csproj
+++ b/tugasAkhir.csproj
@@ -88,6 +88,12 @@
     <Compile Include="add_staff.Designer.cs">
       <DependentUpon>add_staff.cs</DependentUpon>
     </Compile>
+    <Compile Include="changepassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="changepassword.Designer.cs">
+      <DependentUpon>changepassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="deletelNilai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +174,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="resetpassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="resetpassword.Designer.cs">
+      <DependentUpon>resetpassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="siswa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -272,6 +284,9 @@
     <EmbeddedResource Include="add_staff.resx">
       <DependentUpon>add_staff.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="changepassword.resx">
+      <DependentUpon>changepassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="deletelNilai.resx">
       <DependentUpon>deletelNilai.cs</DependentUpon>
     </EmbeddedResource>
@@ -321,6 +336,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="resetpassword.resx">
+      <DependentUpon>resetpassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="siswa.resx">
       <DependentUpon>siswa.cs</DependentUpon>
     </EmbeddedResource>
